# handy-arg

./: MANIFEST.in  setup.cfg
arg/: __init__.py  base.py
tests/: demo.py  inspece_argparse.py
