[metadata]
name = handy-arg
version = attr: arg.__version__
keywords = handy-arg, arg, handy, argparse, config
author = nrnn
author_email = nrnn_code@yeah.net
description = Description todo.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nrnn/handy-arg
project_urls =
    Bug Tracker = https://github.com/nrnn/handy-arg/issues
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = arg
python_requires = >=3.6
include_package_data = True
